--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+/.vs/sorting-algorithms/v16/ipch/AutoPCH/fe36944ae98615ef/DATAGENERATOR.ipch
+/.vs/sorting-algorithms/v16/.suo
+/.vs/sorting-algorithms/v16/Browse.VC.db
+/.vs/sorting-algorithms/v16/Browse.VC.db-shm
+/.vs/sorting-algorithms/v16/Browse.VC.db-wal
+/.vs/sorting-algorithms/v16/Browse.VC.opendb
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
