--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@
 /.vs/VSWorkspaceState.json
 /.vs/sorting-algorithms/v16/ipch/AutoPCH/5e137fb2fcfbd104/SHELLSORT.ipch
 /.vs/sorting-algorithms/v16/ipch/AutoPCH/9dbc6950c8cb514c/RADIXSORT.ipch
+/.vs/sorting-algorithms/v17/.suo
+/.vs/sorting-algorithms/v17/Browse.VC.db
+/.vs/sorting-algorithms/v17/Browse.VC.db-shm
+/.vs/sorting-algorithms/v17/Browse.VC.db-wal
+/.vs/sorting-algorithms/v17/Browse.VC.opendb
+/.vs/sorting-algorithms/v17/ipch/AutoPCH/5e137fb2fcfbd104/SHELLSORT.ipch
+/.vs/sorting-algorithms/v17/ipch/AutoPCH/9dbc6950c8cb514c/RADIXSORT.ipch
+/.vs/sorting-algorithms/v17/ipch/AutoPCH/fe36944ae98615ef/DATAGENERATOR.ipch
