Too much that I am lazy to comment

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 /.vs/sorting-algorithms/v17/ipch/AutoPCH/5e137fb2fcfbd104/SHELLSORT.ipch
 /.vs/sorting-algorithms/v17/ipch/AutoPCH/9dbc6950c8cb514c/RADIXSORT.ipch
 /.vs/sorting-algorithms/v17/ipch/AutoPCH/fe36944ae98615ef/DATAGENERATOR.ipch
+/.vs/sorting/v17
